test/errors/const4.ida

#OUTPUT
#Syntax Error: Constants can only be literal values.
# -> [10] const int myconst =
#
#END

#RET 0

const int myconst =

extern func printf(s:str, ...)

func main -> int
begin
    return 0;
end
